--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client",
+    "dev": "cd client && npm start",
+    "preinstall": " npm install",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
