--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "cd client && npm start",
+    "heroku-postbuild": "npm install --prefix client",
     "test": "cd client && npm test",
-    "preinstall": "npm install",
-    "install": "cd client && npm install",
+    "preinstall": "cd server && npm install",
     "build": "cd client && npm run build"
   },
   "author": "",
