--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "npm install --prefix client",
-    "test": "cd client && npm test",
-    "preinstall": "cd server && npm install",
-    "build": "cd client && npm run build"
+    "heroku-postbuild": "npm install --prefix client"
   },
   "author": "",
   "license": "ISC",
