--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "react": "^17.0.1",
+    "react-datetime-picker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
