--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "artwalks",
-  "version": "1.0.0",
+  "name": "client",
+  "version": "0.1.0",
   "private": true,
+  "proxy": "https://tranquil-garden-27529.herokuapp.com",
   "dependencies": {
-    "@reach/router": "^1.3.4",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.1",
+    "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.4",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,12 +20,21 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
