--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "artwalk-mern-app",
+  "name": "my-mern-app",
   "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "cd server && npm start",
-    "react-dev": "cd client && npm start",
-    "test": "cd server && npm test",
-    "preinstall": "cd server && npm install",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "heroku-postbuild": "npm install --prefix client"
   },
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "redux-thunk": "^2.3.0"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.6.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.15",
+    "nodemon": "^2.0.13"
   }
 }
