First mini deployment

--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://tranquil-garden-27529.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
@@ -10,7 +9,8 @@
     "axios": "^0.21.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^0.9.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
