--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "client",
+  "name": "artwalk-test-app-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://tranquil-garden-27529.herokuapp.com",
+  "proxy": "https://artwalktestform.herokuapp.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
